--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
 
 
-    <!-- Our form styles -->
-    <link rel="stylesheet" href="https://terchris.github.io/rc-contact/public/contact-form.css">
+    <!-- THECONTACTFORM styles -->
+    <link rel="stylesheet" href="https://norwegianredcross.github.io/form-contact/public/contact-form.css">
 
     <!-- Icons -->
     <link rel="shortcut icon" href="https://www.rodekors.no/UI/favicon.ico" />
@@ -636,8 +636,8 @@
                                                     }
                                                 });
                                         </script>
-                                        
-                                        <script src="https://terchris.github.io/rc-contact/public/contact-form.js"></script>
+<!-- THECONTACTFORM script -->                                        
+<script src="https://norwegianredcross.github.io/form-contact/public/contact-form.js"></script>
 
                                         </body>
                                         </html>
